--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "matter-js": "^0.20.0",
     "pixi.js": "^8.16.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
